# strings

./: .gitignore  README.md
skills/witsoc/: REPORT.md  SKILL.md  bootstrap.py  formalization_obligations.json  ideation.json  pyproject.toml  witsoc.py
skills/witsoc/benchmarks/: construction_records.json  formal_conjectures_index.json  frontier_novelty_suite.json  full_solve_gate_suite.json  manifest.json  olympiad_suite.json  open_problem_corpus.json  open_rung_suite.json  prover_battery.json  rediscovery_suite.json  research_portfolio.json
skills/witsoc/references/: discovery-program.md  knowledge-stores.md  soc.md  wit.md
skills/witsoc/scripts/: _common.sh  analogical_transfer.py  artifacts.py  asymptotic_analyzer.py  attackability.py  audit.sh  auto_decompose.py  autoformalize.py  autonomous_campaign.py  barrier_attack.py  blueprint_campaign.py  build_mathlib_atlas.py  bus_apply_replies.py  campaign.py  campaign_budget_gate.py  campaign_driver.py  close_obligation.py  cluster_campaign.py  concept_generator.py  conjecture_miner.py  conjecture_to_lemma_pipeline.py  construction_search.py  core_lemma_atlas.json  counterexample_search.py  covering_attack.py  curriculum.py  curriculum_portfolio.py  cycle.sh  decision_ledger.py  decompose_problem.py  definition_synthesis.py  dialectic.py  discovery_engine.py  discovery_evaluators.py  discovery_ledger.py  discovery_lift.py  discovery_sampler_example.py  domain_barrier_lemmas.py  empirical_miner.py  engine_dispatch.py  (+181 more)
skills/witsoc/witsoc-explorer/: SKILL.md
skills/witsoc/witsoc-generator/: SKILL.md
skills/witsoc/witsoc-research-lovasz/: SKILL.md  changes.md
(+199 files in other folders)
